feat: 비밀번호 유효성 검사 기준 추가

--- a/docs/기능목록.md
+++ b/docs/기능목록.md
@@ -36,9 +36,9 @@
 
 <br>
 
-> <strong>📎 아이디, 비밀번호 유효성 검사 조건</strong>
-> - `ID`: 최소 길이, 사용 가능 문자
-> - `PW`: 최소 길이, 다양한 문자 사용, 사전 단어 제한(널리 알려진 단어 및 사용자 정보 미포함)
+> <strong>📎 비밀번호 유효성 검사 조건</strong>
+> - 최소 길이 8자
+> - 대문자, 소문자, 숫자, 특수문자 포함
 
 ## UI
 - 테마 설정: `다크 모드` || `라이트 모드`
